<resources>
    <string name="app_name">Monuments</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Monuments App</string>
    <string name="nav_header_subtitle">Powered by SDOS</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_monuments">Monuments</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_my_monuments">My Monuments</string>
    <string name="monuments_title">Monuments</string>
    <string name="monuments__img_main_description">Monument main img</string>
    <string name="common__sort">sort</string>
    <string name="common__filter">filter</string>
    <string name="common__dialog_accept">Aceptar</string>
    <string name="common__dialog_error">Error</string>
    <string name="monuments_fab_description">fab button</string>
    <string name="monuments__sort_monuments">Ordenar monumentos</string>
    <string name="monuments__sort_id">Ordenar por Fecha de creación</string>
    <string name="monuments__sort_name">Ordenar por nombre</string>
    <string name="monuments__sort_n_to_s">Ordenar de Norte a Sur</string>
    <string name="monuments__sort_e_to_w">Ordenar de Este a Oeste</string>
    <string name="webMonument__google_maps">google maps</string>
    <string name="webMonument__email">email</string>
    <string name="webMonument__message_email">Sabías que el monumento %1$s se encuentra en %2$s. Conócela un poco más aquí: %3$s</string>
    <string name="webMonument__empty_url_info">https://en.wikipedia.org/wiki/%1$s</string>
    <string name="newMonuments__monument_name">Name</string>
    <string name="newMonuments__monument_description">Description</string>
    <string name="newMonuments__monument_city">City</string>
    <string name="newMonument__monumnet_location">Location</string>
    <string name="newMonument__monument_images">Images</string>
    <string name="newMonument__monument_image_description">Monument image</string>
    <string name="newMonument__add_img_description">Add Image</string>
    <string name="newMonument__map_location_description">Location map</string>
    <string name="common__save">Guardar</string>
    <string name="createMonument__select_image">Seleccione desde donde quiere importar la imagen</string>
    <string name="common__cancel">Cancelar</string>
    <string name="newgame__max_50_text">%1$s/50 caracteres Max.</string>
    <string name="newgame__max_250_text">%1$s/250 caracteres Max.</string>
    <string name="monuments__country_filter">Filtrar por país</string>
    <string name="monuments__btn_close_description">Close dialog</string>
    <string name="detail__info_btn_description">Info button</string>
    <string name="detail__fav_btn_description">Fav button</string>
    <string name="detail__static_map_description">Static map</string>
    <string name="monuments__country_flag_img">flag country img</string>
    <string name="newMonuments__file_provider">%1$s.fileprovider</string>
    <string name="newMonuments__prefix_file">JPEG_%1$s_</string>
    <string name="newMonuments_suffix_file">.jpg</string>
    <string name="myMonuments__text_without_monuments">Without own monuments.\nDo not be afraid, press the add button</string>
    <string name="favorites__monument_favorite_text">No added favorites\nThe star is your friend</string>
    <string name="monuments__delete">Borrar</string>
    <string name="monuments__close_btn_desc">Close btn</string>
    <string name="monuments__delete_dialog_message">¿Desea eliminar el monumento: %1$s?</string>
    <string name="monuments__snackbar_text">Se ha eliminado el monumento!</string>
    <string name="monuments_snackbar_undo">Deshacer</string>
</resources>