<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg__rounded_dialog"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monuments__sort_monuments"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialogBtnClose"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic__monuments_close_24"
                app:iconSize="38dp"
                app:iconTint="@color/black"
                android:layout_marginEnd="-14dp"
                android:layout_marginTop="-8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp" />

            <RadioGroup
                android:id="@+id/sortDialogRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogBtnClose">

                <RadioButton
                    android:id="@+id/sortDialogRadioBtnId"
                    style="@style/RadioButtonCustomStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/radio_btn_background"
                    android:text="@string/monuments__sort_id"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/sortDialogRadioBtnName"
                    style="@style/RadioButtonCustomStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/radio_btn_background"
                    android:text="@string/monuments__sort_name"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/sortDialogRadioBtnNtoS"
                    style="@style/RadioButtonCustomStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/radio_btn_background"
                    android:text="@string/monuments__sort_n_to_s"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/sortDialogRadioBtnEtoW"
                    style="@style/RadioButtonCustomStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/radio_btn_background"
                    android:text="@string/monuments__sort_e_to_w"
                    android:textSize="18sp" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/dialogBtnAccept"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="30dp"
        android:text="@string/common__dialog_accept"
        android:textSize="28sp" />

</LinearLayout>