<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/newMomumentNestedScroll"
    tools:context=".ui.fragments.createMonument.CreateMonumentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newMonumentContainerMonumentName"
            style="@style/FormTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fragment_margin"
            android:layout_marginTop="@dimen/fragment_margin_top"
            android:hint="@string/newMonuments__monument_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newMonumentInputMonumentName"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/newMonumentLabelMaxName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fragment_margin"
            android:layout_marginTop="@dimen/new_monument_max_characters_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newMonumentContainerMonumentName"
            tools:text="0/50 caracteres Max." />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newMonumentContainerMonumentDesc"
            style="@style/FormTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fragment_margin"
            android:layout_marginTop="@dimen/text_margin_top"
            android:hint="@string/newMonuments__monument_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newMonumentContainerMonumentName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newMonumentInputMonumentDesc"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="250"
                android:maxLines="5" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/newMonumentLabelMaxDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fragment_margin"
            android:layout_marginTop="@dimen/new_monument_max_characters_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newMonumentContainerMonumentDesc"
            tools:text="0/250 caracteres Max." />

        <Spinner
            android:id="@+id/newMonumentSpinnerCountry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/new_monument_spinner_height"
            android:layout_marginHorizontal="@dimen/fragment_margin"
            android:layout_marginTop="@dimen/new_monument_margin_top_bottom"
            android:background="@drawable/bg__spinner_countries"
            android:entries="@array/countries_array"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newMonumentContainerMonumentDesc" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newMonumentContainerMonumentCity"
            style="@style/FormTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fragment_margin"
            android:layout_marginTop="@dimen/fragment_margin"
            android:hint="@string/newMonuments__monument_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newMonumentSpinnerCountry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newMonumentInputMonumentCity"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/newMonumentLabelMaxCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fragment_margin"
            android:layout_marginTop="@dimen/new_monument_max_characters_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newMonumentContainerMonumentCity"
            tools:text="0/50 caracteres Max." />

        <TextView
            android:id="@+id/newMonumentLabelMonumentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fragment_margin"
            android:text="@string/newMonument__monumnet_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newMonumentContainerMonumentCity" />

        <com.example.practica5.utils.CustomMapView
            android:id="@+id/newMonumentMapViewLocation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/new_monument_mapview_height"
            android:layout_marginHorizontal="@dimen/fragment_margin"
            android:layout_marginTop="@dimen/new_monument_margin_top_bottom"
            android:contentDescription="@string/newMonument__map_location_description"
            app:layout_constraintTop_toBottomOf="@id/newMonumentLabelMonumentLocation" />

        <TextView
            android:id="@+id/newMonumentLabelMonumentImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fragment_margin"
            android:layout_marginBottom="@dimen/new_monument_margin_top_bottom"
            android:text="@string/newMonument__monument_images"
            app:layout_constraintBottom_toTopOf="@id/newMonumentListImages"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newMonumentListImages"
            android:layout_width="@dimen/new_monument_recyclerview_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_monument_recycler_margin_top"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toStartOf="@+id/newMonumentImgNewImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newMonumentMapViewLocation"
            tools:listitem="@layout/row_newmonument_image" />

        <ImageView
            android:id="@+id/newMonumentImgNewImage"
            android:layout_width="@dimen/new_monument_add_image_size"
            android:layout_height="@dimen/new_monument_add_image_size"
            android:layout_marginStart="@dimen/new_monument_img_margin_horizontal"
            android:layout_marginTop="@dimen/new_monument_recycler_margin_top"
            android:layout_marginEnd="@dimen/fragment_margin"
            android:background="@color/md_theme_light_toolbar"
            android:contentDescription="@string/newMonument__add_img_description"
            android:padding="@dimen/new_monument_padding"
            android:src="@drawable/ic__monuments_add_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newMonumentMapViewLocation" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newMonumentBtnSave"
            android:layout_width="0dp"
            android:layout_height="@dimen/new_monument_save_button_height"
            android:layout_marginHorizontal="@dimen/fragment_margin"
            android:layout_marginTop="@dimen/new_monument_margin_top_bottom"
            android:backgroundTint="@color/md_theme_light_surfaceTint"
            android:enabled="false"
            android:text="@string/common__save"
            android:textSize="@dimen/detail_title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newMonumentImgNewImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>