<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.detail.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_collapsing_toolbar_height"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextColor="@color/white"
            app:contentScrim="?attr/colorPrimaryContainer"
            app:expandedTitleMarginBottom="@dimen/detail_collapsing_toolbar_title_margin_bottom"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@id/toolbar">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/detailViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/detail_viewpager_margin_bottom" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/detailLabelName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fragment_margin"
                    android:layout_marginBottom="@dimen/fragment_margin"
                    android:textSize="@dimen/detail_title_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Monument" />

                <TextView
                    android:id="@+id/detailLabelCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fragment_margin"
                    android:layout_marginTop="@dimen/detail_subtitle_top_margin"
                    android:textSize="@dimen/detail_subtitle_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="City" />

                <ImageView
                    android:id="@+id/detailImgFlag"
                    android:layout_width="@dimen/monuments_country_flag_size"
                    android:layout_height="@dimen/monuments_country_flag_size"
                    android:layout_marginStart="@dimen/monuments_country_flag_start_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/detailLabelCity"
                    tools:background="@color/black" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/detailBtnFavorite"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/detail__fav_btn_description"
                    app:icon="@drawable/ic__monuments_star_yellow_24"
                    app:iconSize="35dp"
                    app:iconTint="@color/yellow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/detailBtnInfoWeb"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/detail__info_btn_description"
                    app:icon="@drawable/ic__monuments_info_24"
                    app:iconSize="35dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/detailBtnFavorite"
                    app:layout_constraintHorizontal_chainStyle="packed" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/detailBtnRemove"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/detail__info_btn_description"
                    android:visibility="visible"
                    app:icon="@drawable/ic__monuments_bin"
                    app:iconSize="25dp"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/detailBtnInfoWeb"
                    app:layout_constraintHorizontal_chainStyle="packed" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/detailToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailLabelInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fragment_margin"
                android:layout_marginTop="@dimen/fragment_margin"
                android:textSize="@dimen/monuments_text_body_size"
                tools:text="Description" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/detailMapViewStatic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_mapview_height"
                android:layout_margin="@dimen/fragment_margin"
                android:clickable="false"
                android:contentDescription="@string/detail__static_map_description" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>